Fixes for CrawlableDatasetDods.